# homefinder

./: ADMIN_FEATURES.md  AGENTS.md  CONTEXT.md  app.py  background_scraper.py  beautifulsoup.py  config.py  database.py  downloader.py  example.html  example_utils.py  main.py  models.py  prova.py  pyproject.toml  scraper.py  tettorosso.py  webapp.py
crawl/crawl/: settings.py
examples/www.galileoimmobiliare.it/: casasingola.html  casasingola.md  casasingola.yaml
examples/www.tettorossoimmobiliare.it/: quadrilocale-primo-piano.html  quadrilocale-primo-piano.md  quadrilocale-primo-piano.yaml
static/js/: iframe-loader.js
templates/: about.html  admin.html  base.html  error.html  index.html  property_detail.html  search.html  stats.html
tests/: test_data.py  test_scrapers.py
views/: api_views.py  main_views.py  property_views.py
