[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homefinder"
version = "0.1.0"
description = "Web scraping and property finding tool for real estate listings"
authors = [{name = "Roberto", email = "roberto@example.com"}]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.dependencies]
beautifulsoup4 = ">=4.12.0"
requests = ">=2.31.0"
flask = ">=3.0.0"
jinja2 = ">=3.1.0"
python-dotenv = ">=1.0.0"
scrapy = ">=2.11.0"
typing-extensions = ">=4.0.0"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0"
]

[tool.setuptools]
package-dir = {"" = "homefinder"}
